# isnapshot

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  isnapshot.c
